# tactile-control

./: .gitignore  README.md
data/ident-step-down/: data_1.mat  data_3.mat  data_4.mat  data_5.mat
data/ident-step-down/experiment-5/: data_2.mat  data_6.mat
data/ident-step-down/experiment-9/: data_1.mat  data_2.mat  data_3.mat  data_4.mat  data_5.mat  data_6.mat  data_7.mat  data_8.mat
data/ident-step-up/: data_2.mat
data/objectRecognition/: info.txt  objectNames_small.txt
data/stepUpIdentification/: data_1.mat  data_3.mat  data_4.mat  data_5.mat  data_6.mat  data_7.mat
gaussian-process-controller/: .gitignore  .~lock.out.txt#  .~lock.positionCD_A20_E1_K100_M250.txt#  .~lock.positionCD_A20_E2_K100_M200.txt#  .~lock.positionCD_A20_E3_K100_M200.txt#  .~lock.position_A20_E4_K100.txt#  calibrateLines.py  changeDirectionInContact.py~  changeDirectionTest.py  changeDirectionTest.py~  changeDirectionTestPosMode.py  changeDirectionTestPosMode.py~  controller1_init.txt  controller2_2.txt  controller_init.txt  controller_init.txt~  controller_output.txt  countroller_output.txt~  direction.txt  direction.txt~  fakeController.py  fakeController.py~  find_lines.py  find_lines.py~  find_lines2.py  gaussianprocesstest.py  gpControllerRoll1Fing.py  gpControllerRoll1Fing.py~  gpControllerRoll1FingNewAct.py  gpControllerTest.py  gp_controller.py  gp_controller.py~  iCubInterface.ini  iCubInterface.py  iCubInterface.py~  iCubInterface.txt  imageTest.py  imageTest.py~  out.txt  positionCD_A15_E3_K100_M250.txt  (+15 more)
gaussian-process-controller/direction_stop/: direction_300.txt
gaussian-process-controller/old/: argTest.py  changeDirectionInContact.py  changeDirectionTestPosMode.py  controller_example.txt  countroller_output.txt  fakeController.py
gaussian-process-controller/position/: position_A10_E2_K100.txt  position_A10_E2_K150.txt  position_A10_E4_K150.txt  position_A20_E2_K100.txt  position_A20_E2_K200.txt  position_A20_E3_K150.txt
grasping-software/: CMakeLists.txt
grasping-software/.travis/: push-doxygen-to-gh-pages.sh
grasping-software/app/: CMakeLists.txt
grasping-software/src/: CMakeLists.txt
grasping-software/src/modules/tactileGrasp/: CMakeLists.txt  GazeThread.cpp  GraspThread.cpp  GraspThreadNew.cpp  TactileGraspModule.cpp  main.cpp  tactileGrasp.thrift
grasping-software/src/modules/tactileGrasp/idl/include/: tactileGrasp_IDLServer.h
grasping-software/src/modules/tactileGrasp/idl/src/: tactileGrasp_IDLServer.cpp
grasping-software/src/modules/tactileGrasp/include/iCub/tactileGrasp/: GazeThread.h  GraspThread.h  GraspThreadNew.h  TactileGraspEnums.h  TactileGraspModule.h
object-grasping-demo/: .gitignore  CMakeLists.txt
object-grasping-demo/app/: CMakeLists.txt
object-grasping-demo/app/contexts/objectGrasping/: confObjectGrasping.ini
object-grasping-demo/src/: CMakeLists.txt
object-grasping-demo/src/modules/: CMakeLists.txt
object-grasping-demo/src/modules/objectGrasping/: CMakeLists.txt  ObjectGraspingModule.cpp  main.cpp
object-grasping-demo/src/modules/objectGrasping/data/: ConfigData.cpp  LogData.cpp  RPCCommandsData.cpp  TaskData.cpp
object-grasping-demo/src/modules/objectGrasping/include/iCub/objectGrasping/: ObjectGraspingEnums.h  ObjectGraspingModule.h
object-grasping-demo/src/modules/objectGrasping/include/iCub/objectGrasping/data/: ConfigData.h  LogData.h  RPCCommandsData.h  TaskData.h
object-grasping-demo/src/modules/objectGrasping/include/iCub/objectGrasping/task/: ControlTask.h  RampTask.h  StepTask.h  Task.h
object-grasping-demo/src/modules/objectGrasping/include/iCub/objectGrasping/thread/: TaskThread.h
object-grasping-demo/src/modules/objectGrasping/include/iCub/objectGrasping/util/: ControllersUtil.h  PortsUtil.h  RPCCommandsUtil.h
object-grasping-demo/src/modules/objectGrasping/task/: ControlTask.cpp  RampTask.cpp  StepTask.cpp  Task.cpp
object-grasping-demo/src/modules/objectGrasping/thread/: TaskThread.cpp
object-grasping-demo/src/modules/objectGrasping/util/: ControllersUtil.cpp  PortsUtil.cpp  RPCCommandsUtil.cpp
plant-identification/: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.fe2e0b2
plant-identification/app/: CMakeLists.txt
plant-identification/src/modules/plantIdentification/: CMakeLists.txt  PlantIdentificationModule.cpp  main.cpp  plantIdentification.thrift
plant-identification/src/modules/plantIdentification/action/: WaveAction.cpp
plant-identification/src/modules/plantIdentification/data/: GMMData.cpp  LogData.cpp  RPCCommandsData.cpp  TaskData.cpp
plant-identification/src/modules/plantIdentification/idl/include/: plantIdentification_IDLServer.h
plant-identification/src/modules/plantIdentification/idl/src/: plantIdentification_IDLServer.cpp
plant-identification/src/modules/plantIdentification/include/iCub/plantIdentification/: PlantIdentificationEnums.h  PlantIdentificationModule.h
plant-identification/src/modules/plantIdentification/include/iCub/plantIdentification/action/: WaveAction.h
plant-identification/src/modules/plantIdentification/include/iCub/plantIdentification/data/: GMMData.h  LogData.h  RPCCommandsData.h  TaskData.h
plant-identification/src/modules/plantIdentification/include/iCub/plantIdentification/task/: ApproachTask.h  ControlTask.h  RampTask.h  StepTask.h  Task.h
plant-identification/src/modules/plantIdentification/include/iCub/plantIdentification/thread/: EventsThread.h  TaskThread.h
plant-identification/src/modules/plantIdentification/include/iCub/plantIdentification/util/: ControllersUtil.h  EventsUtil.h  ICubUtil.h  MLUtil.h  PortsUtil.h  RPCCommandsUtil.h
plant-identification/src/modules/plantIdentification/task/: ApproachTask.cpp  ControlTask.cpp  RampTask.cpp  StepTask.cpp  Task.cpp
plant-identification/src/modules/plantIdentification/thread/: EventsThread.cpp  TaskThread.cpp
plant-identification/src/modules/plantIdentification/util/: ControllersUtil.cpp  EventsUtil.cpp  ICubUtil.cpp  MLUtil.cpp  PortsUtil.cpp  RPCCommandsUtil.cpp
python/: iCubController.py  iCubInterface.py  iCubUtility.py
(+228 files in other folders)
